add: rememberMe|fix: bugs